public/css/addon.css
.container {
    padding-right: 0;
    padding-left: 0;
    margin-right: 0;
    margin-left: 0;
    height: 89vh;
    position: relative;
    max-height: 89vh;
    display: flex;
    overflow: hidden;
    width: 100%
}
.body{
    width: 100%;
}

.inner-box {
    height: auto;
    overflow-y: auto;
    overflow-x: hidden;
    width: 100%;
    flex: 1;
    -webkit-overflw-scrolling: touch
}
.side.navbar.navbar-default{
    height: 100%;
    max-height: 100%;
}
.navbar{
    margin-bottom: 0px;
    background: #d8d8d8;
}
.col-sm-9 {
    height: 100%;
    max-height: 100%;

}
.col-lg-10{
    height: 100%;
    max-height: 100%
}
.col-sm-3,
.col-lg-2{
    margin-left: -15px;
    height: 100%;
    min-width: 17rem
}

.row{
    height: 100%;
    max-height: 100%;
}

